# notes

./: .gitignore  README.md  docker-compose.yml
.envs/: .mongodb  .server
nginx/: Dockerfile  nginx.conf
server/: Dockerfile  openapi.yaml  pyproject.toml
server/.linters/: .flake8
server/apps/api/: urls.py
server/apps/api/v1/: urls.py
server/apps/notes/: models.py  permissions.py  serializers.py  services.py  viewsets.py
server/apps/notes/tests/: test_api.py
server/apps/users/: auth.py  managers.py  models.py  serializers.py  viewsets.py
server/apps/users/tests/: test_api.py
server/config/: urls.py
server/config/migrations/notes/: 0001_initial.py
server/config/migrations/users/: 0001_initial.py
server/config/settings/: installed_apps.py  settings.py
server/templates/: swagger_base.html
